# liquidhaskell-blog

./: Makefile  README.md  about.md  archive.md  blog.hs  blog.md  index.md  liquidhaskell-blog.cabal  site.hs  stack.yaml
docs/: CNAME  about.html  archive.html  atom.xml  blog.html  index.html  pin
posts/: 2013-01-01-refinement-types-101.lhs  2013-01-01-refinement-types-101.lhs.markdown  2013-01-15-measuring-lists-II.lhs.markdown  2013-01-27-refinements101-reax.lhs  2013-01-27-refinements101-reax.lhs.markdown  2013-01-28-bounding-vectors.lhs.markdown  2013-01-31-safely-catching-a-list-by-its-tail.lhs  2013-01-31-safely-catching-a-list-by-its-tail.lhs.markdown  2013-02-16-kmeans-clustering-I.lhs  2013-02-16-kmeans-clustering-I.lhs.markdown  2013-02-17-kmeans-clustering-II.lhs  2013-02-17-kmeans-clustering-II.lhs.markdown  2013-03-04-bounding-vectors.lhs  2013-03-04-bounding-vectors.lhs.markdown  2013-03-26-talking-about-sets.lhs  2013-03-26-talking-about-sets.lhs.markdown  2013-05-16-unique-zippers.lhs  2013-05-24-unique-zipper.lhs  2013-05-24-unique-zipper.lhs.markdown  2013-06-03-abstracting-over-refinements.lhs  2013-06-03-abstracting-over-refinements.lhs.markdown  2013-07-29-putting-things-in-order.lhs  2013-07-29-putting-things-in-order.lhs.markdown  2013-10-10-csv-tables.lhs.markdown  2013-11-23-telling_lies.lhs  2013-11-23-telling_lies.lhs.markdown  2013-12-01-getting-to-the-bottom.lhs  2013-12-02-getting-to-the-bottom.lhs  2013-12-02-getting-to-the-bottom.lhs.markdown  2013-12-09-checking-termination.lhs  2013-12-09-checking-termination.lhs.markdown  (+33 more)
(+90 files in other folders)
